src/test/ui/feature-gate-match_beginning_vert.stderr
error[E0658]: Use of a '|' at the beginning of a match arm is experimental (see issue #44101)
  --> $DIR/feature-gate-match_beginning_vert.rs:24:9
   |
24 |         | A => println!("A"),
   |         ^
   |
   = help: add #![feature(match_beginning_vert)] to the crate attributes to enable

error[E0658]: Use of a '|' at the beginning of a match arm is experimental (see issue #44101)
  --> $DIR/feature-gate-match_beginning_vert.rs:26:9
   |
26 |         | B | C => println!("BC!"),
   |         ^
   |
   = help: add #![feature(match_beginning_vert)] to the crate attributes to enable

error[E0658]: Use of a '|' at the beginning of a match arm is experimental (see issue #44101)
  --> $DIR/feature-gate-match_beginning_vert.rs:28:9
   |
28 |         | _ => {},
   |         ^
   |
   = help: add #![feature(match_beginning_vert)] to the crate attributes to enable

error: aborting due to 3 previous errors

